<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  android:paddingStart="@dimen/spaceNormal"
  android:paddingTop="@dimen/spaceSmall"
  android:paddingEnd="@dimen/spaceNormal"
  >

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/scrobLoginUrlLayout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/scrobLoginUrlInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/textScrobLoginUrlHint"
      android:imeOptions="actionNext"
      android:inputType="textUri"
      />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/scrobLoginUsernameLayout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spaceSmall"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/scrobLoginUsernameInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/textScrobLoginUsernameHint"
      android:imeOptions="actionNext"
      android:inputType="text"
      />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/scrobLoginPasswordLayout"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/spaceSmall"
    android:layout_marginBottom="@dimen/spaceSmall"
    app:passwordToggleEnabled="true"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/scrobLoginPasswordInput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/textScrobLoginPasswordHint"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      />

  </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
